--- a/P05-Dependencias2/premio/pom.xml
+++ b/P05-Dependencias2/premio/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ppss.P05</groupId>
-    <artifactId>gestorLlamadasMocks</artifactId>
+    <artifactId>premio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
