--- a/P08-WebDriver/madisonIsland/pom.xml
+++ b/P08-WebDriver/madisonIsland/pom.xml
@@ -80,6 +80,12 @@
             <version>4.19.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.19.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
     <plugins>
